2003-03-25  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/bits/typesizes.h: New file.
	* sysdeps/unix/sysv/linux/alpha/bits/typesizes.h: New file.
	* sysdeps/unix/sysv/linux/sparc/bits/typesizes.h: New file.

2003-03-24  Daniel Jacobowitz  <drow@mvista.com>

	* sysdeps/unix/sysv/linux/arm/sysdep-cancel.h
	(DOARGS_5, DOARGS_6, DOARGS_7): Rewritten.

2003-03-22  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/fork.c (__fork): Add libc_hidden_def.

2003-03-21  Daniel Jacobowitz  <drow@mvista.com>

	* sysdeps/unix/sysv/linux/arm/sysdep-cancel.h
	(SINGLE_THREAD_P_PIC): Use "reg" instead of "lr".

2003-03-21  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/tls.h [__ASSUME_SET_THREAD_AREA_SYSCALL]
	(TLS_SETUP_GS_SEGMENT): Fix a typo.

2003-03-19  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/Makefile: Fix cut&paste error.

2003-03-18  Roland McGrath  <roland@redhat.com>

	* Versions (libpthread: GLIBC_2.2): Remove
	pthread_barrierattr_getpshared, never really existed.
	(libpthread: GLIBC_2.0): Move __pthread_initialize to ...
	(libpthread: GLIBC_PRIVATE): ... here.

2003-03-14  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/sparc64/Makefile: New file.
	* sysdeps/unix/sysv/linux/sparc/Makefile ($(objpfx)specs): Use full
	path for crt[in].o.

2003-03-14  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/mips/pspinlock.c (__pthread_spin_lock): Don't .set
	mips2 on new abi.
	* sysdeps/mips/pt-machine.h (__compare_and_swap): Likewise.
	Handle 64-bit longs on n64.

2003-03-07  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/ia64/pspinlock.c (__pthread_spin_lock,
	__pthread_spin_trylock): Rewritten.

2003-03-06  Ulrich Drepper  <drepper@redhat.com>

	* tst-cancel4.c (tf_sleep): Lower sleep time a bit to not upset
	recent kernels.

2003-03-02  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/timer_create.c (timer_create): Return correct
	error for CPU clocks.

	* sysdeps/unix/sysv/linux/bits/posix_opt.h: Define